--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 12:39:00 PM</p>
+    <p class="lastupdate">09/16/2020 12:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">85.1&#176;F</td>
+        <td class="data">85.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">85.1&#176;F</td>
+        <td class="data">85.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">85.1&#176;F</td>
+        <td class="data">85.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.1&#176;F</td>
+        <td class="data">49.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">30%</td>
+        <td class="data">29%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.986 inHg (-0.060)</td>
+        <td class="data">29.986 inHg (-0.057)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph ENE (68&#176;)</td>
+        <td class="data">2 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.7&#176;F</td>
+        <td class="data">74.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:38:45 PM">
-            85.1</span><br/>
+          <span title="12:42:41 PM">
+            85.7</span><br/>
           <span title="06:54:23 AM">
             46.1</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:38:45 PM" class="hival">
-            85.1</span>
+          <span title="12:42:41 PM" class="hival">
+            85.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:12:57 AM">
             81</span><br/>
-          <span title="12:34:57 PM">
-            30</span>
+          <span title="12:41:47 PM">
+            29</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:42:01 AM">
             30.047</span><br/>
-          <span title="12:32:01 PM">
-            29.986</span>
+          <span title="12:40:01 PM">
+            29.985</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 21 hours, 52 minutes</td>
+      <td class="data">14 days, 21 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 21 hours, 52 minutes</td>
+      <td class="data">14 days, 21 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
