--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 01:59:00 PM</p>
+    <p class="lastupdate">09/16/2020 02:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,23 +50,23 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">93.0&#176;F</td>
+        <td class="data">93.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">93.0&#176;F</td>
+        <td class="data">93.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">93.0&#176;F</td>
+        <td class="data">93.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.6&#176;F</td>
+        <td class="data">42.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">19%</td>
+        <td class="data">17%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
@@ -74,7 +74,7 @@
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph E (90&#176;)</td>
+        <td class="data">1 mph WSW (248&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:58:13 PM">
-            93.0</span><br/>
+          <span title="02:03:29 PM">
+            93.6</span><br/>
           <span title="06:54:23 AM">
             46.1</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:58:13 PM (Wednesday)">
-            93.0</span><br/>
+          <span title="02:03:29 PM (Wednesday)">
+            93.6</span><br/>
           <span title="06:54:23 AM (Wednesday)">
             46.1</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:58:13 PM" class="hival">
-            93.0</span>
+          <span title="02:03:29 PM" class="hival">
+            93.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:58:13 PM (Wednesday)" class="hival">
-            93.0</span>
+          <span title="02:03:29 PM (Wednesday)" class="hival">
+            93.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 23 hours, 12 minutes</td>
+      <td class="data">14 days, 23 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 23 hours, 12 minutes</td>
+      <td class="data">14 days, 23 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
